# IOCP-ChatRoom

./: .gitignore  CMakeLists.txt  README.md  person.proto
ClientApp/: CMakeLists.txt
ClientApp/src/: main.cpp
ServerApp/: CMakeLists.txt
ServerApp/include/Server/: room.hpp  server.hpp
ServerApp/src/: main.cpp  room.cpp  server.cpp  user.cpp
apps/ClientApp/: CMakeLists.txt  main.cpp
apps/ServerApp/: CMakeLists.txt  main.cpp
apps/demo_app/: CMakeLists.txt
cmake_modules/: MyUsefulFuncs.cmake
demo_app/: CMakeLists.txt
demo_app/src/: main.cpp
libs/net_lib/: CMakeLists.txt  Server.cpp  Server.hpp  Session.cpp  Session.hpp  VOverlapped.cpp  VOverlapped.hpp  demo_lib.cpp  demo_lib.hpp  v_overlapped.cpp  v_overlapped.hpp
net_lib/: CMakeLists.txt
net_lib/include/net_lib/: WSAContext.hpp  io_event.hpp  json.hpp  message_type.hpp  package_dispatcher.hpp  package_handler.h  package_handler.hpp  server.hpp  session.hpp  user.hpp  v_overlapped.hpp
net_lib/src/: demo_lib.cpp  package_dispatcher.cpp  package_handler.cpp  server.cpp  session.cpp  user.cpp  v_overlapped.cpp
proto/include/google/protobuf/: any.h
tests/: CMakeLists.txt
tests/demo_lib_test/: CMakeLists.txt  test_basic.cpp  test_demo_lib.cpp  test_edge.cpp
tests/test_data/: sample_input.json
tests/utils/: mock_functions.cpp  test_helpers.hpp
